fixed spacing between card two and three

--- a/src/components/styles/infocards.scss
+++ b/src/components/styles/infocards.scss
@@ -47,7 +47,5 @@
   }
 }
 .linkButton {
-  position: relative;
-  right: 50px;
-  top: 25px;
+  float: right;
 }
